# cc_rpc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
doc/: CMakeLists.txt
doc/arch/: CMakeLists.txt  cc_rpc_call_sequence.puml  cc_rpc_overview_building_blocks.puml  cc_rpc_overview_client.puml  mainpage.md
doc/detailed_design/: CMakeLists.txt  detailed_design.dox  mainpage.md
src/: cc_rpc.hpp  cc_rpc_client.hpp  client_main.cpp  example_client.hpp  example_interface.hpp  example_rpc_client.cpp  example_rpc_client.hpp  example_server.cpp  interfaces.hpp  server_main.cpp
src/rpc_client/: cc_rpc_client.cpp  cc_rpc_client.hpp  rpc_client_stub.hpp  rpc_client_tranport.cpp  rpc_client_tranport.hpp
